deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-service
  labels:
    app: healthcare-app
spec:
  selector:
    app: healthcare-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
